--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
           cache: npm
 
       - name: Install deps
-        run: npm ci || npm i
+        run: npm install
 
       - name: Build
         run: npm run build
